# cpp-shapes

./: CMakeLists.txt  README.md  main.cpp  shapes2.cpp  shapes3ab.cpp  shapes4a.cpp  shapes6_unique_ptr.cpp  shapes7_vector.cpp  shapes_1.cpp  shapes_10_Polygon.cpp  shapes_2_basic_class.cpp  shapes_3_reading_from_console.cpp  shapes_4_create_method.cpp  shapes_5_6_inheritance_and_unique_ptr.cpp  shapes_7_vector.cpp  shapes_8_abstract_class.cpp  shapes_9_overridden_operator.cpp
