cmake_minimum_required(VERSION 3.13)
project(shapes)

set(CMAKE_CXX_STANDARD 17)

add_executable(shapes main.cpp)
add_executable(shapes2 shapes2.cpp)
add_executable(shapes3ab shapes3ab.cpp)
add_executable(shapes4a shapes4a.cpp)
add_executable(shapes5 shapes5.cpp)
add_executable(shapes6_unique_ptr shapes6_unique_ptr.cpp)
add_executable(shapes7_vector shapes7_vector.cpp)